# 4coder-template

./: .gitignore  CMakeLists.txt
console/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/includes/Application/: Application.h
core/src/Application/: Application.cpp
core/src/Config/: IniConf.cpp  IniConf.h
docs/: doxygen.conf
scripts/: build.sh
scripts/init/: project-name  rename-project.sh
